--- a/.syntax.md
+++ b/.syntax.md
@@ -23,7 +23,7 @@ Some text...
 {icon=highlighter}
 G> ## Generic
 G>
-G> Custom icons from https://fontawesome.com
+G> Custom icons from https://fontawesome.com/icons
 
 Sample code:
 
