--- a/.syntax.md
+++ b/.syntax.md
@@ -14,6 +14,8 @@ echo "Hello World!"
 
 Some text here
 
+To add a footnote, you insert a footnote tag like this[^fn1].
+
 W> ## Warning
 W>
 W> Book is not finished yet!
@@ -33,3 +35,6 @@ More text...
 
 {crop-start-line=5,crop-end-line=12,starting-line-number=5}
 <<[Banner](code/fn.sh)
+
+[^fn1]: This is the footnote content.
+    second line after typing in four spaces.
